--- a/package.json
+++ b/package.json
@@ -39,13 +39,11 @@
     "classnames": "^2.1.5",
     "cookie": "^0.2.3",
     "extend": "^3.0.0",
-    "immutable": "^3.7.5",
     "isomorphic-fetch": "^2.1.1",
     "query-string": "^2.4.2",
     "rc-dialog": "^6.1.1",
     "react-bootstrap": "^0.29.5",
-    "react-loader": "^2.0.0",
-    "redux-immutablejs": "0.0.8"
+    "react-loader": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "6.3.13",
