--- a/dummy/package.json
+++ b/dummy/package.json
@@ -50,6 +50,7 @@
     "jquery-deparam": "^0.4.2",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "lodash": "^4.15.0",
     "node-sass": "^3.3.3",
     "piping": "0.3.0",
     "query-string": "^2.4.2",
