--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cookie": "^0.2.3",
     "extend": "^3.0.0",
     "isomorphic-fetch": "^2.1.1",
+    "lodash": "^4.15.0",
     "query-string": "^2.4.2",
     "rc-dialog": "^6.1.1",
     "react-bootstrap": "^0.29.5",
